# satisfiability-checking

./: .gitignore  README.md  pom.xml
.github/workflows/: maven.yml  release_tag.yml  rust.yml
rust/: Cargo.toml  README.md  ROADMAP.md
rust/core/: Cargo.toml
rust/core/src/: interner.rs  lib.rs  lit.rs  rational.rs  theory.rs
rust/sat/: Cargo.toml
rust/sat/src/: cdcl.rs  dimacs.rs  enumerate.rs  heap.rs  lib.rs
rust/sat/tests/: differential.rs
rust/smt/: Cargo.toml
rust/smt/src/: lib.rs  script.rs  sexp.rs
rust/smt/tests/: corpus.rs
rust/term/: Cargo.toml
rust/term/src/: lib.rs
rust/theory/: Cargo.toml
rust/theory/src/: euf.rs  lib.rs
src/test/java/: BitVectorDivisionByZeroTest.java  BitVectorWidthTest.java  CNFParserTest.java  DPLLCDCLConflictAnalysisTest.java  DPLLCDCLSolverTest.java  DPLLCDCLTest.java  DPLLSolverTest.java  DPLLTest.java  DifferentialSatTest.java  DimacsParserTest.java  EnumerationSolverTest.java  EnumerationTest.java  EqualityConstraintParserTest.java  EqualityFunctionSolverTest.java  FullLazyWatchedLemmaTest.java  LinearConstraintParserTest.java  MultivariatePolynomialTest.java  RationalTest.java  ReadCommandTest.java  SMTOptimizationLoopTest.java  Simplex2Test.java  SimplexExplanationTest.java  SimplexFeasibilitySolverTest.java  SimplexOptimizationSolverTest.java  SmtLibArithmeticBooleanTest.java  SmtLibBooleanStructureTest.java  SmtLibBvTest.java  SmtLibDefineFunBoolTest.java  SmtLibNraTest.java  SmtLibParserTest.java  StrictInequalityTest.java  TseitinTransformationTest.java
(+179 files in other folders)
