[workspace]
resolver = "2"
members = ["core", "sat"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/paultristanwagner/satisfiability-checking"

[workspace.dependencies]
satcheck-core = { path = "core" }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
rustc-hash = "2"
smallvec = "1"

# Tuned for the solver hot loops. `panic = "abort"` is intentionally left off so the
# default `cargo test`/`cargo bench` harnesses stay frictionless; add it to the eventual
# release binary if desired.
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
